--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-brand-blue {
+    @apply text-white bg-brand-blue-600 hover:bg-brand-blue-500 px-4 py-2 rounded-[10px];
+  }
+}
